--- a/vini.cfg
+++ b/vini.cfg
@@ -1,32 +1,36 @@
-                   /////////////////
-                   //   Aliases   //
-                   /////////////////
+// DPI: 400
+// Mouse Hertz: 1000Hz
+// Monitor Hertz: 144hz
+// Windows Default (Uncheck Enhance Precision)
+
+
+                /////////////////
+                //   Aliases   //
+                /////////////////
 
 
 alias +duckjump "+jump; +duck";
 alias -duckjump "-jump; -duck";
 
 
-                   /////////////////
-                   //    Binds    //
-                   /////////////////
+                /////////////////
+                //    Binds    //
+                /////////////////
 
 
 unbindall
 
 //  Mouse Buttons  //
 /////////////////////
-//  Empty slots: MOUSE3, MOUSE5
 
-bind "MOUSE1"   "+attack"
-bind "MOUSE2"   "+attack2"
-bind "MOUSE4"   "+voicerecord"
+bind "MOUSE1" "+attack"
+bind "MOUSE2" "+attack2"
+bind "MOUSE4" "+voicerecord"
 
 bind "MWHEELDOWN" "+jump"
 
 //  Keyboard Numbers  //
 ////////////////////////
-//  Empty slots: none
 
 bind "0" "slot10"
 bind "1" "slot1"
@@ -41,7 +45,6 @@ bind "9" "slot9”
 
 //  Keyboard Letters  //
 ////////////////////////
-//  Empty slots: l, p, v, c
 
 bind "w" "+forward"
 bind "a" "+moveleft"
@@ -63,13 +66,11 @@ bind "x" "radio2"
 bind "y" "messagemode"
 bind "u" "messagemode2"
 
-//  TALVEZ REMOVA  //
 bind "o" "bot_place"
 bind "h" "show"
 
 //  Keyboard Symbols  //
 ////////////////////////
-//  Empty slots: \ - = ; ' /
 
 bind "[" "host_timescale 1"
 bind "]" "host_timescale 4"
@@ -78,24 +79,22 @@ bind "." "buyammo2"
 
 //  Keyboard Special  //
 ////////////////////////
-//  Empty slots: CAPSLOCK, RSHIFT
 
-bind "ESCAPE"   "cancelselect"
-bind "TAB"      "+showscores"
-bind "SHIFT"    "+speed"
-bind "CTRL"     "+duck"
-bind "ALT"      "+radar"
-bind "SPACE"    "+duckjump"
+bind "ESCAPE" "cancelselect"
+bind "TAB"    "+showscores"
+bind "SHIFT"  "+speed"
+bind "CTRL"   "+duck"
+bind "ALT"    "+radar"
+bind "SPACE"  "+duckjump"
 
-bind "DEL"      "mute"
-bind "PAUSE"    "pause"
+bind "DEL"   "mute"
+bind "PAUSE" "pause"
 
-bind "RALT"     "script pauseScript()"
-bind "RCTRL"    "script nadeSavePos()"
+bind "RALT"  "script pauseScript()"
+bind "RCTRL" "script nadeSavePos()"
 
 //  Keyboard Function  //
 /////////////////////////
-//  Empty slots: F1, F2, F8, F9, F11, F22
 
 bind "F3"  "autobuy"
 bind "F4"  "rebuy"
@@ -106,16 +105,15 @@ bind "F10" "quit prompt"
 
 //  Keyboard KeyPad  //
 ///////////////////////
-//  Empty slots: 
 
 bind "KP_MINUS" "toggleconsole"
 bind "KP_PGDN"  "cL_crosshairsize 2; cl_crosshairgap -3"
 bind "KP_5"     "incrementvar cl_crosshairsize 2 4000 3998"
 
 
-                   /////////////////////
-                   //    Crosshair    //
-                   /////////////////////
+                /////////////////////
+                //    Crosshair    //
+                /////////////////////
 
 
 // AWP, AUG, SSG  //
@@ -140,7 +138,6 @@ cl_crosshairalpha "220"
 /////////////
 
 cl_crosshaircolor "5"
-
 cl_crosshaircolor_b "255"
 cl_crosshaircolor_g "0"
 cl_crosshaircolor_r "185"
@@ -166,9 +163,9 @@ cl_crosshairthickness "1"
 cl_crosshairusealpha "1"
 
 
-                   /////////////////////
-                   //       HUD       //
-                   /////////////////////
+                /////////////////////
+                //       HUD       //
+                /////////////////////
 
 
 //  Color  //
@@ -356,11 +353,10 @@ cl_cmdrate "128"
 cl_color "1"
 cl_compass_enabled "1"
 
-                 
 
-                   /////////////////////
-                   //              //
-                   /////////////////////
+                /////////////////////////////
+                //    Didn't set up yet    //
+                /////////////////////////////
 
 
 cl_debugrumble "0"
@@ -562,9 +558,3 @@ xbox_throttlebias "100"
 xbox_throttlespoof "200"
 zoom_sensitivity_ratio_joystick "1.0"
 zoom_sensitivity_ratio_mouse "1.2"
-
-//DPI: 400
-//HERTZ MOUSE: 1000hz
-//HERTZ MONITOR: 240hz
-//WINDOWS DEFAULT (UNMARK ENHANCE - APROXIMAR PRECISAO OFF)
-
