--- a/AceVinicius.cfg
+++ b/AceVinicius.cfg
@@ -5,6 +5,68 @@
 
 
                 /////////////////
+                //     Game    //
+                /////////////////
+
+
+//  Console  //
+///////////////
+
+con_enable "1"
+
+// Tick Rate //
+///////////////
+
+cl_cmdrate "128"
+cl_interp "0"
+cl_interp_ratio "1"
+cl_lagcompensation "1"
+cl_updaterate "128"
+
+//  Monitor  //
+///////////////
+
+fps_max "240"
+fps_max_menu "240"
+mat_monitorgamma "2.197864"
+mat_monitorgamma_tv_enabled "0"
+mat_queue_mode "2"
+mat_savechanges
+
+//  Mouse  //
+/////////////
+
+sensitivity "2.2"
+zoom_sensitivity_ratio_mouse "1.2"
+m_rawinput "1"
+m_customaccel "0"
+m_mouseaccel1 "0"
+m_mouseaccel2 "0"
+
+// Misc  //
+///////////
+
+closeonbuy "1"
+cl_autohelp "0"
+cl_autowepswitch "0"
+cl_disablehtmlmotd "1"
+cl_disablefreezecam "1"
+cl_dm_buyrandomweapons "0"
+cl_downloadfilter "nosounds"
+cl_forcepreload "1"
+cl_use_opens_buy_menu "0"
+cl_showhelp "0"
+cl_teammate_colors_show "1"
+gameinstructor_enable "0"
+hud_takesshots "0"
+mm_dedicated_search_maxping "50"
+option_duck_method "0"
+option_speed_method "0"
+player_nevershow_communityservermessage "1"
+ui_steam_overlay_notification_position "bottomright"
+
+
+                /////////////////
                 //   Aliases   //
                 /////////////////
 
@@ -28,6 +90,7 @@ bind "MOUSE2" "+attack2"
 bind "MOUSE4" "+voicerecord"
 
 bind "MWHEELDOWN" "+jump"
+bind "MWHEELUP" "invnext"
 
 //  Keyboard Numbers  //
 ////////////////////////
@@ -41,7 +104,7 @@ bind "5" "slot5"
 bind "6" "slot6"
 bind "7" "slot7"
 bind "8" "slot8"
-bind "9" "slot9”
+bind "9" "slot9"
 
 //  Keyboard Letters  //
 ////////////////////////
@@ -53,9 +116,9 @@ bind "d" "+moveright"
 
 bind "b" "buymenu"
 bind "e" "+use"
-bind "f" "+lookatweapon;r_cleardecals"
+bind "f" "+lookatweapon; r_cleardecals"
 bind "g" "drop"
-bind "n" "+jump;-attack;-jump"
+bind "n" "+jump; -attack; -jump"
 bind "q" "lastinv"
 bind "r" "+reload"
 bind "t" "+spray_menu"
@@ -67,6 +130,7 @@ bind "y" "messagemode"
 bind "u" "messagemode2"
 
 bind "o" "bot_place"
+bind "p" "sv_rethrow_last_grenade"
 bind "h" "show"
 
 //  Keyboard Symbols  //
@@ -75,7 +139,8 @@ bind "h" "show"
 bind "[" "host_timescale 1"
 bind "]" "host_timescale 4"
 bind "," "noclip"
-bind "." "buyammo2"
+bind "`" "toggleconsole"
+bind "\" "say PRA GANHAR VAI TER QUE GIRAR LIXO .."
 
 //  Keyboard Special  //
 ////////////////////////
@@ -90,9 +155,6 @@ bind "SPACE"  "+duckjump"
 bind "DEL"   "mute"
 bind "PAUSE" "pause"
 
-bind "RALT"  "script pauseScript()"
-bind "RCTRL" "script nadeSavePos()"
-
 //  Keyboard Function  //
 /////////////////////////
 
@@ -106,15 +168,15 @@ bind "F10" "quit prompt"
 //  Keyboard KeyPad  //
 ///////////////////////
 
-bind "KP_MINUS" "toggleconsole"
-bind "KP_PGDN"  "cL_crosshairsize 2; cl_crosshairgap -3"
-bind "KP_5"     "incrementvar cl_crosshairsize 2 4000 3998"
+bind "KP_MINUS" "toggle voice_enable 1 0"
 
 
                 /////////////////////
                 //    Crosshair    //
                 /////////////////////
 
+
+crosshair "1"
 
 // AWP, AUG, SSG  //
 ////////////////////
@@ -126,13 +188,13 @@ cl_crosshair_t "0"
 //  Outline  //
 ///////////////
 
-cl_crosshair_drawoutline "0                           "
+cl_crosshair_drawoutline "0"
 cl_crosshair_outlinethickness "1"
 
 //  Transparency  //
 ////////////////////
 
-cl_crosshairalpha "220"
+cl_crosshairalpha "128"
 
 //  Color  //
 /////////////
@@ -147,9 +209,10 @@ cl_crosshaircolor_r "185"
 
 cl_crosshairdot "0"
 
-//  Other  //
+//  Style  //
 /////////////
 
+cl_scalecrosshair "1"
 cl_crosshair_dynamic_maxdist_splitratio "0.35"
 cl_crosshair_dynamic_splitalpha_innermod "1"
 cl_crosshair_dynamic_splitalpha_outermod "0.5"
@@ -168,6 +231,27 @@ cl_crosshairusealpha "1"
                 /////////////////////
 
 
+//  Weapon  //
+///////////////
+
+cl_bob_lower_amt "21"
+cl_bobamt_lat "0.500000"
+cl_bobamt_vert "0.250000"
+cl_bobcycle "0.98"
+cl_viewmodel_shift_left_amt "1.5"
+cl_viewmodel_shift_right_amt "0.75"
+cl_righthand "0"
+cl_showloadout "1"
+r_drawparticles "1"
+r_drawtracers "1"
+r_drawtracers_firstperson "1"
+viewmodel_fov "60"
+viewmodel_offset_x "-1"
+viewmodel_offset_y "-2"
+viewmodel_offset_z "-1"
+viewmodel_presetpos "1"
+viewmodel_recoil "1"
+
 //  Color  //
 /////////////
 
@@ -182,16 +266,36 @@ cl_hud_healthammo_style "0"
 cl_hud_playercount_pos "0"
 cl_hud_playercount_showcount "0"
 
-//  Scale  //
+//  Radar  //
 /////////////
 
 cl_hud_radar_scale "1.000000"
-hud_scaling "0.950000"
-cl_radar_always_centered "0"
+cl_radar_always_centered "1"
 cl_radar_icon_scale_min "0.4"
 cl_radar_rotate "1"
 cl_radar_scale "0.300000"
 cl_radar_square_with_scoreboard "1"
+hud_scaling "0.950000"
+
+// Net Graphs  //
+/////////////////
+
+net_allow_multicast "1"
+net_graph "0"
+net_graphheight "64"
+net_graphholdsvframerate "0"
+net_graphipc "0"
+net_graphmsecs "400"
+net_graphpos "1"
+net_graphproportionalfont "1"
+net_graphshowinterp "1"
+net_graphshowlatency "1"
+net_graphshowsvframerate "0"
+net_graphsolid "1"
+net_graphtext "1"
+net_maxroutable "1200"
+net_scale "1.2"
+net_steamcnx_allowrelay "1"
 
 
                    /////////////////
@@ -202,30 +306,30 @@ cl_radar_square_with_scoreboard "1"
 //  Sound  //
 /////////////
 
-dsp_enhance_stereo "0"
-snd_mixahead "0.02" /* 0.025
+dsp_slow_cpu "0"
+dsp_enhance_stereo "1"
+snd_mixahead "0.02"
 snd_pitchquality "1"
 snd_deathcamera_volume "0.0"
 snd_mapobjective_volume "0.12"
 snd_menumusic_volume "0.0"
-snd_mvp_volume "0.11"
+snd_mvp_volume "0.25"
 snd_roundend_volume "0.2"
 snd_roundstart_volume "0.06"
 snd_tensecondwarning_volume "0.35"
 voice_scale "0.62"
 snd_mute_losefocus "0"
-snd_surround_speakers "0" /* -1
+snd_surround_speakers "0"
 snd_front_headphone_position "53.2";
 snd_rear_headphone_position "90.0";
 snd_headphone_pan_exponent "1.2";
 snd_headphone_pan_radial_weight "0.5"
-
 snd_duckerattacktime "0.5"
 snd_duckerreleasetime "2.5"
 snd_duckerthreshold "0.15"
 snd_ducking_off "1"
 snd_ducktovolume "0.55"
-snd_dzmusic_volume "0.2"
+snd_dzmusic_volume "0.10"
 snd_hrtf_distance_behind "100"
 snd_hrtf_voice_delay "0.1"
 snd_hwcompat "0"
@@ -246,48 +350,18 @@ voice_mixer_boost "0"
 voice_mixer_mute "0"
 voice_mixer_volume "1.0"
 voice_modenable "1"
-voice_positional "0"
+voice_positional "1"
 voice_system_enable "1"
 voice_threshold "2000"
-
 volume ".3"
 vprof_graphheight "256"
 vprof_graphwidth "512"
 vprof_unaccounted_limit "0.3"
 vprof_verbose "1"
 vprof_warningmsec "10"
-weapon_accuracy_logging "0"
 
 
-
-
-
-net_allow_multicast "1"
-net_graph "1"
-net_graphheight "64"
-net_graphholdsvframerate "0"
-net_graphipc "0"
-net_graphmsecs "400"
-net_graphpos "1"
-net_graphproportionalfont "1"
-net_graphshowinterp "1"
-net_graphshowlatency "1"
-net_graphshowsvframerate "0"
-net_graphsolid "1"
-net_graphtext "1"
-net_maxroutable "1200"
-net_scale "5"
-net_steamcnx_allowrelay "1"
-
-
-
-r_drawtracers "1"
-r_drawtracers_firstperson "1"
-
-
-
-
-
+//    Didnt set up yet     //
 @panorama_debug_overlay_opacity "0.8"
 adsp_debug "0"
 ai_report_task_timings_on_limit "0"
@@ -340,42 +414,22 @@ cc_subtitles "0"
 chet_debug_idle "0"
 cl_allowdownload "1"
 cl_allowupload "1"
-cl_autohelp "1"
-cl_autowepswitch "0"
-cl_bob_lower_amt "21"
-cl_bobamt_lat "0.400000"
-cl_bobamt_vert "0.250000"
-cl_bobcycle "0.98"
 cl_chatfilter_version "1"
 cl_chatfilters "63"
 cl_clanid "0"
-cl_cmdrate "128"
 cl_color "1"
 cl_compass_enabled "1"
-
-
-                /////////////////////////////
-                //    Didn't set up yet    //
-                /////////////////////////////
-
-
 cl_debugrumble "0"
 cl_detail_avoid_force "0.4"
 cl_detail_avoid_radius "64"
 cl_detail_avoid_recover_speed "0.25"
 cl_detail_max_sway "5"
-cl_disablefreezecam "0"
-cl_disablehtmlmotd "0"
-cl_dm_buyrandomweapons "0"
-cl_downloadfilter "all"
 cl_dz_playagain_auto_spectate "0"
 cl_embedded_stream_audio_volume "60"
 cl_embedded_stream_audio_volume_xmaster "1"
 cl_fixedcrosshairgap "3"
-cl_forcepreload "0"
 cl_freezecampanel_position_dynamic "1"
 cl_grass_mip_bias "-0.5"
-
 cl_idealpitchscale "0.8"
 cl_inventory_saved_filter2 "all"
 cl_inventory_saved_sort2 "inv_sort_age"
@@ -387,64 +441,36 @@ cl_mute_enemy_team "0"
 cl_obs_interp_enable "1"
 cl_observercrosshair "1"
 cl_playerspray_auto_apply "0"
-cl_quickinventory_deadzone_size "0.05"
 cl_quickinventory_lastinv "0"
-
-cl_righthand "0"
 cl_rumblescale "1.0"
-cl_scalecrosshair "1"
 cl_scoreboard_mouse_enable_binding "+attack2"
 cl_scoreboard_survivors_always_on "0"
 cl_show_clan_in_death_notice "1"
-cl_showhelp "1"
-cl_showloadout "1"
 cl_showpluginmessages2 "0"
 cl_spec_follow_grenade_key "0"
 cl_spec_mode "4"
 cl_tablet_mapmode "1"
-cl_teamid_overhead_always "0"
-cl_teammate_colors_show 1"
-cl_thirdperson "0"
 cl_timeout "30.000000"
-cl_updaterate "128"
-cl_use_opens_buy_menu "0"
-cl_viewmodel_shift_left_amt "1.5"
-cl_viewmodel_shift_right_amt "0.75"
 closecaption "0"
-closeonbuy "1"
 commentary_firstrun "0"
-con_enable ""
-crosshair "1"
-dsp_enhance_stereo "0"
 engine_no_focus_sleep "50"
 force_audio_english "0"
 func_break_max_pieces "15"
 g15_update_msec "250"
-gameinstructor_enable "0"
-
 hud_showtargetid "0"
-hud_takesshots "0"
-
 key_bind_version "4"
-lobby_default_privacy_bits1 "6"
 lockMoveControllerRet "0"
 lookspring "0"
 lookstrafe "0"
-m_customaccel "0"
 m_customaccel_exponent "1.05"
 m_customaccel_max "0"
 m_customaccel_scale "0.04"
 m_forward "1"
-m_mouseaccel1 "0"
-m_mouseaccel2 "0"
 m_mousespeed "1"
 m_pitch "0.022"
-m_rawinput "1"
 m_side "0.8"
 m_yaw "0.022"
 mapoverview_icon_scale "1.0"
-mat_monitorgamma "2.197864"
-mat_monitorgamma_tv_enabled "0"
 mat_powersavingsmode "0"
 mat_queue_report "0"
 mat_spewalloc "0"
@@ -454,19 +480,13 @@ mc_dead_zone_radius "0.06"
 mc_max_pitchrate "100.0"
 mc_max_yawrate "230.0"
 mm_csgo_community_search_players_min "3"
-mm_dedicated_search_maxping "50"
 mm_server_search_lan_ports "27015,27016,27017,27018,27019,27020"
 muzzleflash_light "1"
 name "fln"
-
 npc_height_adjust "1"
-option_duck_method "0"
-option_speed_method "0"
 play_distance "1"
 player_botdifflast_s "0.000000"
 player_competitive_maplist_2v2_7_0_E8907D2E "mg_de_train,mg_de_lake,mg_de_inferno,mg_de_shortnuke,mg_de_vertigo,mg_gd_rialto,mg_de_shortdust,mg_de_overpass,mg_de_cbble"
-player_competitive_maplist_8_7_0_92A6FFBB "mg_de_dust2,mg_de_train,mg_de_inferno,mg_de_nuke,mg_de_mirage,mg_cs_office,mg_de_cache,mg_de_biome,mg_de_abbey,mg_de_zoo,mg_cs_agency,mg_de_overpass,mg_de_cbble"
-player_nevershow_communityservermessage "1"
 player_teamplayedlast "2"
 player_wargames_list2_7_0_604 "mg_skirmish_flyingscoutsman,mg_skirmish_armsrace,mg_skirmish_demolition"
 r_drawmodelstatsoverlaymax "1.5"
@@ -488,10 +508,8 @@ scene_showfaceto "0"
 scene_showlook "0"
 scene_showmoveto "0"
 scene_showunlock "0"
-sensitivity "2.2"
 sk_autoaim_mode "1"
 skill "1.000000"
-
 sound_device_override "{0.0.0.00000000}.{8882523b-dff3-4a3f-a6ea-397310857798}"
 spec_replay_autostart "1"
 spec_show_xray "0"
@@ -522,39 +540,22 @@ texture_budget_panel_height "284"
 texture_budget_panel_width "512"
 texture_budget_panel_x "0"
 texture_budget_panel_y "450"
-tr_best_course_time "0"
-tr_completed_training "0"
 tv_nochat "0"
 ui_inventorysettings_recently_acknowledged ""
-ui_nearbylobbies_filter "survival"
 ui_playsettings_maps_listen_casual "random_classic"
 ui_playsettings_maps_listen_competitive "random_classic"
 ui_playsettings_maps_listen_deathmatch "random_classic"
 ui_playsettings_maps_listen_scrimcomp2v2 "mg_de_inferno"
 ui_playsettings_maps_listen_skirmish "mg_skirmish_flyingscoutsman"
 ui_playsettings_maps_official_casual "mg_casualsigma"
-ui_playsettings_maps_official_dangerzone "mg_dz_blacksite"
 ui_playsettings_maps_official_deathmatch "mg_casualsigma"
 ui_playsettings_maps_workshop ""
 ui_playsettings_mode_listen "casual"
-ui_playsettings_mode_official_dz "survival"
 ui_playsettings_warmup_map_name "de_mirage"
 ui_popup_weaponupdate_version "0"
-ui_steam_overlay_notification_position "topleft"
 ui_vanitysetting_itemid "17293822569102704642"
 ui_vanitysetting_loadoutslot "secondary1"
 ui_vanitysetting_model2 "models/player/custom_player/legacy/tm_jumpsuit_variantc.mdl"
 ui_vanitysetting_team "ct"
 vgui_message_dialog_modal "1"
-viewmodel_fov "60"
-viewmodel_offset_x "1"
-viewmodel_offset_y "1"
-viewmodel_offset_z "-1"
-viewmodel_presetpos "1"
-viewmodel_recoil "1.0"
 
-xbox_autothrottle "1"
-xbox_throttlebias "100"
-xbox_throttlespoof "200"
-zoom_sensitivity_ratio_joystick "1.0"
-zoom_sensitivity_ratio_mouse "1.2"
