--- a/AceVinicius.cfg
+++ b/AceVinicius.cfg
@@ -8,30 +8,34 @@
                 //     Game    //
                 /////////////////
 
-
 //  Console  //
 ///////////////
 
 con_enable "1"
 
-// Tick Rate //
-///////////////
+// Rates //
+///////////
 
+rate "786432.000000" // Lower if having network issues
 cl_cmdrate "128"
-cl_interp "0"
-cl_interp_ratio "1"
-cl_lagcompensation "1"
 cl_updaterate "128"
+cl_interp "0.0"
+cl_interp_ratio "1"
+cl_interpolate "1"
+cl_lagcompensation "1"
+net_client_steamdatagram_enable_override "1"
 
 //  Monitor  //
 ///////////////
 
-fps_max "240"
-fps_max_menu "240"
+fps_max "999"
+fps_max_menu "145"
 mat_monitorgamma "2.197864"
 mat_monitorgamma_tv_enabled "0"
-mat_queue_mode "2"
+mat_queue_mode "-1"
 mat_savechanges
+
+engine_no_focus_sleep "0"
 
 //  Mouse  //
 /////////////
@@ -42,6 +46,8 @@ m_rawinput "1"
 m_customaccel "0"
 m_mouseaccel1 "0"
 m_mouseaccel2 "0"
+m_mousespeed "1"
+m_pitch "0.022"
 
 // Misc  //
 ///////////
@@ -71,8 +77,8 @@ ui_steam_overlay_notification_position "bottomright"
                 /////////////////
 
 
-alias +duckjump "+jump; +duck";
-alias -duckjump "-jump; -duck";
+alias +duckjump "+jump; +duck"
+alias -duckjump "-jump; -duck"
 
 
                 /////////////////
@@ -123,6 +129,7 @@ bind "q" "lastinv"
 bind "r" "+reload"
 bind "t" "+spray_menu"
 
+bind "c" "slot12"
 bind "m" "teammenu"
 bind "z" "radio1"
 bind "x" "radio2"
@@ -140,7 +147,7 @@ bind "[" "host_timescale 1"
 bind "]" "host_timescale 4"
 bind "," "noclip"
 bind "`" "toggleconsole"
-bind "\" "say PRA GANHAR VAI TER QUE GIRAR LIXO .."
+bind "\" "say O cara vem jogar façet pra ficar chorando .."
 
 //  Keyboard Special  //
 ////////////////////////
@@ -212,14 +219,12 @@ cl_crosshairdot "0"
 //  Style  //
 /////////////
 
-cl_scalecrosshair "1"
 cl_crosshair_dynamic_maxdist_splitratio "0.35"
 cl_crosshair_dynamic_splitalpha_innermod "1"
 cl_crosshair_dynamic_splitalpha_outermod "0.5"
 cl_crosshair_dynamic_splitdist "7"
 cl_crosshairgap "-3"
 cl_crosshairgap_useweaponvalue "0"
-cl_crosshairscale "1"
 cl_crosshairsize "2"
 cl_crosshairstyle "4"
 cl_crosshairthickness "1"
@@ -272,7 +277,7 @@ cl_hud_playercount_showcount "0"
 cl_hud_radar_scale "1.000000"
 cl_radar_always_centered "1"
 cl_radar_icon_scale_min "0.4"
-cl_radar_rotate "1"
+cl_radar_rotate "0"
 cl_radar_scale "0.300000"
 cl_radar_square_with_scoreboard "1"
 hud_scaling "0.950000"
@@ -466,8 +471,6 @@ m_customaccel_exponent "1.05"
 m_customaccel_max "0"
 m_customaccel_scale "0.04"
 m_forward "1"
-m_mousespeed "1"
-m_pitch "0.022"
 m_side "0.8"
 m_yaw "0.022"
 mapoverview_icon_scale "1.0"
@@ -486,9 +489,7 @@ name "fln"
 npc_height_adjust "1"
 play_distance "1"
 player_botdifflast_s "0.000000"
-player_competitive_maplist_2v2_7_0_E8907D2E "mg_de_train,mg_de_lake,mg_de_inferno,mg_de_shortnuke,mg_de_vertigo,mg_gd_rialto,mg_de_shortdust,mg_de_overpass,mg_de_cbble"
 player_teamplayedlast "2"
-player_wargames_list2_7_0_604 "mg_skirmish_flyingscoutsman,mg_skirmish_armsrace,mg_skirmish_demolition"
 r_drawmodelstatsoverlaymax "1.5"
 r_drawmodelstatsoverlaymin "0.1"
 r_eyegloss "1"
@@ -497,7 +498,6 @@ r_eyeshift_x "0"
 r_eyeshift_y "0"
 r_eyeshift_z "0"
 r_eyesize "0"
-rate "786432.000000"
 safezonex "1.0"
 safezoney "1.0"
 sc_enable "1.0"
@@ -553,9 +553,5 @@ ui_playsettings_maps_workshop ""
 ui_playsettings_mode_listen "casual"
 ui_playsettings_warmup_map_name "de_mirage"
 ui_popup_weaponupdate_version "0"
-ui_vanitysetting_itemid "17293822569102704642"
-ui_vanitysetting_loadoutslot "secondary1"
-ui_vanitysetting_model2 "models/player/custom_player/legacy/tm_jumpsuit_variantc.mdl"
 ui_vanitysetting_team "ct"
 vgui_message_dialog_modal "1"
-
