--- a/TrainingMap.cfg
+++ b/TrainingMap.cfg
@@ -12,9 +12,6 @@
 //    //  Add a bot to the counter-terrorist team	//
 //    bot_add_ct					//
 //							//
-//    //  Kick all bot					//
-//    bot_kick						//
-//							//
 //    //  Makes the bot stand still and do nothing	//
 //    bot_stop						//
 //							//
@@ -22,6 +19,10 @@
 //    mp_warmup_end					//
 //							//
 //////////////////////////////////////////////////////////
+
+
+//  Kick all bots in match
+bot_kick
 
 //  Enables all commands
 sv_cheats 1
