--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -29,7 +29,7 @@ player_nevershow_communityservermessage "1"
 spec_replay_autostart "0"                               // Disable `Auto-start Killer Replay` when available
 ui_steam_overlay_notification_position "bottomright"
 
-echo Miscelaneous Settings Loaded [X]
+echo [X] Miscelaneous Settings Loaded
 
 // Network //
 /////////////
@@ -42,26 +42,26 @@ cl_predict "1"                      // Skip waiting for server feedback and simu
 cl_predictweapons "1"               // Skip waiting for server feedback and perform client side prediction of weapon effects
 cl_updaterate "128"                 // Number of packets per second you are requesting from the server
 mm_dedicated_search_maxping "50"    // Maxping Search in Matchmaking (increase this value if you can`t find any games)
-rate "786432.000000"                // Your download rate to the server. Max rate: "786432"
+rate "786432"                       // Your download rate to the server. Max rate: "786432"
 
 net_client_steamdatagram_enable_override "1"
 
-echo Network Settings Loaded [X]
+echo [X] Network Settings Loaded
 
 //  FPS & Video  //
 ///////////////////
 
 fps_max "0"                        // Max frames per second (0 = uncapped)
-fps_max_menu "145"                 // Max frames per second in main-menu (0 = uncapped)
-mat_monitorgamma "1.6"             // Sets brightness level to highest
+fps_max_menu "150"                 // Max frames per second in main-menu (0 = uncapped)
+mat_monitorgamma "2.2"               // Sets brightness level
 mat_monitorgamma_tv_enabled "0"    // Turn off TV Mode for less off-set light
 mat_powersavingsmode "0"           // Disables power saving mode
 mat_queue_mode "-1"                // The queue/thread mode, setting this to -1 is default for your system
-r_dynamic "0"                      // Affects dynamic lighting, turned off for more FPS
+r_dynamic "1"                      // Affects dynamic lighting
 
 engine_no_focus_sleep "0"
 
-echo FPS & Video Settings Loaded [X]
+echo [X] FPS & Video Settings Loaded
 
 //  Mouse  //
 /////////////
@@ -71,12 +71,12 @@ m_mouseaccel2 "0"                     // Disables windows mouse acceleration ini
 m_mouseaccel1 "0"                     // Disables windows mouse acceleration initial threshold, safety precaution
 m_customaccel "0"                     // Custom mouse acceleration disabled
 m_mousespeed "1"                      // Windows mouse acceleration disabled, just for precaution
-sensitivity "2.2"
-zoom_sensitivity_ratio_mouse "1.2"    // Adjusts your zoom sensitivity to act as your true sensitivity, default value is 1
+sensitivity "1.6"                     // Adjusts your crosshair sensitivity to act as your true sensitivity, default value is 2
+zoom_sensitivity_ratio_mouse "0.9"    // Adjusts your zoom sensitivity to act as your true sensitivity, default value is 1
 
 m_pitch "0.022"
 
-echo Mouse Settings Loaded [X]
+echo [X] Mouse Settings Loaded
 
 
                 /////////////////
@@ -90,7 +90,7 @@ alias -duckjump "-jump; -duck"
 alias +jumpthrow "+jump; -attack"
 alias -jumpthrow "-jump"
 
-echo Aliases Loaded [X]
+echo [X] Aliases Loaded
 
 
                 /////////////////
@@ -106,14 +106,14 @@ unbindall
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
 bind "MOUSE4" "+voicerecord"
+bind "MOUSE5" "toggle cl_righthand 0 1"
 
 bind "MWHEELDOWN" "+jump"
-bind "MWHEELUP" "invnext"
+bind "MWHEELUP"   "+jump"
 
 //  Keyboard Numbers  //
 ////////////////////////
 
-bind "0" "slot10"
 bind "1" "slot1"
 bind "2" "slot2"
 bind "3" "slot3"
@@ -123,6 +123,7 @@ bind "6" "slot6"
 bind "7" "slot7"
 bind "8" "slot8"
 bind "9" "slot9"
+bind "0" "slot10"
 
 //  Keyboard Letters  //
 ////////////////////////
@@ -141,7 +142,6 @@ bind "q" "lastinv"
 bind "r" "+reload"
 bind "t" "+spray_menu"
 
-bind "c" "slot12"
 bind "m" "teammenu"
 bind "z" "radio1"
 bind "x" "radio2"
@@ -150,15 +150,16 @@ bind "u" "messagemode2"
 
 bind "o" "bot_place"
 bind "p" "sv_rethrow_last_grenade"
-bind "h" "show"
 
 //  Keyboard Symbols  //
 ////////////////////////
 
-bind "[" "host_timescale 1"
-bind "]" "host_timescale 4"
+bind "-" "slot11"
+bind "=" "slot12"
 bind "," "noclip"
 bind "`" "toggleconsole"
+bind "[" "host_timescale 1"
+bind "]" "host_timescale 4"
 bind "\" "say O cara vem jogar façet pra ficar chorando .."
 
 //  Keyboard Special  //
@@ -189,13 +190,12 @@ bind "F10" "quit prompt"
 
 bind "KP_MINUS" "toggle voice_enable 1 0"
 
-echo Binds Loaded [X]
+echo [X] Binds Loaded
 
 
                 /////////////////////
                 //    Crosshair    //
                 /////////////////////
-
 
 crosshair "1"
 
@@ -203,32 +203,32 @@ crosshair "1"
 ////////////////////
 
 cl_crosshair_sniper_show_normal_inaccuracy "0"
-cl_crosshair_sniper_width "2.5"
+cl_crosshair_sniper_width "1"
 cl_crosshair_t "0"
 
 //  Outline  //
 ///////////////
 
-cl_crosshair_drawoutline "0"
+cl_crosshair_drawoutline "1"
 cl_crosshair_outlinethickness "1"
 
 //  Transparency  //
 ////////////////////
 
-cl_crosshairalpha "128"
+cl_crosshairalpha "250"
 
 //  Color  //
 /////////////
 
 cl_crosshaircolor "5"
-cl_crosshaircolor_r "185"
-cl_crosshaircolor_g "0"
-cl_crosshaircolor_b "255"
+cl_crosshaircolor_b "144"
+cl_crosshaircolor_g "195"
+cl_crosshaircolor_r "27"
 
 //  Middle dot  //
 //////////////////
 
-cl_crosshairdot "0"
+cl_crosshairdot "1"
 
 //  Style  //
 /////////////
@@ -237,14 +237,16 @@ cl_crosshair_dynamic_maxdist_splitratio "0.35"
 cl_crosshair_dynamic_splitalpha_innermod "1"
 cl_crosshair_dynamic_splitalpha_outermod "0.5"
 cl_crosshair_dynamic_splitdist "7"
-cl_crosshairgap "-3"
+cl_crosshair_friendly_warning "2"
+cl_crosshairgap "-1"
 cl_crosshairgap_useweaponvalue "0"
-cl_crosshairsize "2"
-cl_crosshairstyle "4"
-cl_crosshairthickness "1"
+cl_crosshairsize "1"
+cl_crosshairstyle "5"
+cl_crosshairthickness "0.4"
 cl_crosshairusealpha "1"
+cl_fixedcrosshairgap "3"
 
-echo Crosshair Loaded [X]
+echo [X] Crosshair Loaded
 
 
                 /////////////////////
@@ -281,7 +283,9 @@ viewmodel_recoil "1"                   // Disable viewmodel reactions to weapon 
 /////////////
 
 cl_hud_background_alpha "0.5"    // Hidden but still visible black bars, easy on the eyes
-cl_hud_color "4"                 // Makes the hud color yellow (THIS CHANGES THE HUD COLOR)
+cl_hud_color "4"                 // This changes the HUD colorS
+
+cl_color "0"
 
 //  Style  //
 /////////////
@@ -291,14 +295,14 @@ cl_hud_healthammo_style "0"         // Reverted hud style due to hidden burst mo
 cl_hud_playercount_pos "0"          // Puts player information in the top instead of bottom
 cl_hud_playercount_showcount "0"    // Shows player avatars instead of numbers left
 cl_teamid_overhead_mode "2"         // Always show team behind walls with equipment
-safezonex "1"                     // Screen width percentage for the hud
+safezonex "1"                       // Screen width percentage for the hud
 safezoney "1"                       // Screen height percentage for the hud
 
 //  Radar  //
 /////////////
 
 cl_hud_radar_scale "1.000000"          // Optimized Radar size
-cl_radar_always_centered "1"           // Centers map instead of player
+cl_radar_always_centered "0.5"         // Centers map instead of player
 cl_radar_icon_scale_min "0.4"          // Minimum player icon scale
 cl_radar_rotate "0"
 cl_radar_scale "0.300000"              // Radar map scaled down to fit all maps
@@ -327,7 +331,7 @@ net_maxroutable "1200"
 net_scale "1.2"
 net_steamcnx_allowrelay "1"
 
-echo HUD Settings Loaded [X]
+echo [X] HUD Settings Loaded
 
 
                    /////////////////
@@ -365,8 +369,8 @@ snd_mute_mvp_music_live_players "0"                // MVP music is muted if play
 snd_mvp_volume "0.25"                              // Volume of the MVP music
 snd_pitchquality "1"
 snd_rear_headphone_position "90.0"
-snd_roundend_volume "0.05"                         // Volume of round end music
-snd_roundstart_volume "0.05"                       // Volume of round start music
+snd_roundend_volume "0   "                         // Volume of round end music
+snd_roundstart_volume "0"                          // Volume of round start music
 snd_surround_speakers "0"
 snd_tensecondwarning_volume "0.25"                 // 10 Second warning music, enabled on 3% volume to hear if there`s time to defuse
 voice_scale "0.40"                                 // Turn down volume of other players to 40% (RECOMMENDED)
@@ -392,7 +396,7 @@ vprof_unaccounted_limit "0.3"
 vprof_verbose "1"
 vprof_warningmsec "10"
 
-echo Sound Settings Loaded [X]
+echo [X] Sound Settings Loaded
 
 
                    ////////////////
