--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -16,7 +16,7 @@ con_enable "1"                                          // Enables console
 closeonbuy "1"
 cl_autowepswitch "0"                                    // Disable auto-weapon switch
 cl_disablehtmlmotd "1"
-cl_dm_buyrandomweapons "0"
+cl_dm_buyrandomweapons "0"                              // Disable random weapons in Deathmatch
 cl_downloadfilter "nosounds"
 cl_forcepreload "1"
 cl_join_advertise "2"                                   // Let friends join your community servers
@@ -29,7 +29,7 @@ player_nevershow_communityservermessage "1"
 spec_replay_autostart "0"                               // Disable `Auto-start Killer Replay` when available
 ui_steam_overlay_notification_position "bottomright"
 
-echo [X] Miscelaneous Settings Loaded
+echo "[X] Miscelaneous Settings Loade"
 
 // Network //
 /////////////
@@ -46,14 +46,14 @@ rate "786432"                       // Your download rate to the server. Max rat
 
 net_client_steamdatagram_enable_override "1"
 
-echo [X] Network Settings Loaded
+echo "[X] Network Settings Loaded"
 
 //  FPS & Video  //
 ///////////////////
 
 fps_max "0"                        // Max frames per second (0 = uncapped)
 fps_max_menu "150"                 // Max frames per second in main-menu (0 = uncapped)
-mat_monitorgamma "2.2"               // Sets brightness level
+mat_monitorgamma "2.2"             // Sets brightness level
 mat_monitorgamma_tv_enabled "0"    // Turn off TV Mode for less off-set light
 mat_powersavingsmode "0"           // Disables power saving mode
 mat_queue_mode "-1"                // The queue/thread mode, setting this to -1 is default for your system
@@ -61,7 +61,7 @@ r_dynamic "1"                      // Affects dynamic lighting
 
 engine_no_focus_sleep "0"
 
-echo [X] FPS & Video Settings Loaded
+echo "[X] FPS & Video Settings Loaded"
 
 //  Mouse  //
 /////////////
@@ -76,7 +76,7 @@ zoom_sensitivity_ratio_mouse "0.9"    // Adjusts your zoom sensitivity to act as
 
 m_pitch "0.022"
 
-echo [X] Mouse Settings Loaded
+echo "[X] Mouse Settings Loaded"
 
 
                 /////////////////
@@ -90,7 +90,7 @@ alias -duckjump "-jump; -duck"
 alias +jumpthrow "+jump; -attack"
 alias -jumpthrow "-jump"
 
-echo [X] Aliases Loaded
+echo "[X] Aliases Loaded"
 
 
                 /////////////////
@@ -106,7 +106,7 @@ unbindall
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
 bind "MOUSE4" "+voicerecord"
-bind "MOUSE5" "toggle cl_righthand 0 1"
+bind "MOUSE5" "toggle cl_righthand 0 1; r_cleardecals"
 
 bind "MWHEELDOWN" "+jump"
 bind "MWHEELUP"   "+jump"
@@ -148,7 +148,8 @@ bind "x" "radio2"
 bind "y" "messagemode"
 bind "u" "messagemode2"
 
-bind "o" "bot_place"
+bind "i" "toggle sv_showimpacts 0 1"    // show bullet impacts on walls, playermodels
+bind "o" "exec spectator.cfg"
 bind "p" "sv_rethrow_last_grenade"
 
 //  Keyboard Symbols  //
@@ -156,6 +157,7 @@ bind "p" "sv_rethrow_last_grenade"
 
 bind "-" "slot11"
 bind "=" "slot12"
+
 bind "," "noclip"
 bind "`" "toggleconsole"
 bind "[" "host_timescale 1"
@@ -175,6 +177,9 @@ bind "SPACE"  "+duckjump"
 bind "DEL"   "mute"
 bind "PAUSE" "pause"
 
+bind "UPARROW"   "fov_cs_debug 33"    // zoom view in
+bind "DOWNARROW" "fov_cs_debug 0"     // zoom view out
+
 //  Keyboard Function  //
 /////////////////////////
 
@@ -189,8 +194,21 @@ bind "F10" "quit prompt"
 ///////////////////////
 
 bind "KP_MINUS" "toggle voice_enable 1 0"
+bind "KP_ENTER" "demo_togglepause"
+bind "KP_PLUS" "demo_timescale 5"
 
-echo [X] Binds Loaded
+bind "KP_END"        "demo_timescale 0.1;sv_showimpacts_time 0.1"
+bind "KP_DOWNARROW"  "demo_timescale 0.2;sv_showimpacts_time 0.2"
+bind "KP_PGDN"       "demo_timescale 0.3;sv_showimpacts_time 0.3"
+bind "KP_LEFTARROW"  "demo_timescale 0.4;sv_showimpacts_time 0.4"
+bind "KP_5"          "demo_timescale 0.5;sv_showimpacts_time 0.5"
+bind "KP_RIGHTARROW" "demo_timescale 0.6;sv_showimpacts_time 0.6"
+bind "KP_HOME"       "demo_timescale 0.7;sv_showimpacts_time 0.7"
+bind "KP_UPARROW"    "demo_timescale 0.8;sv_showimpacts_time 0.8"
+bind "KP_PGUP"       "demo_timescale 0.9;sv_showimpacts_time 0.9"
+bind "KP_INS"        "demo_timescale 1;sv_showimpacts_time 1"
+
+echo "[X] Binds Loaded"
 
 
                 /////////////////////
@@ -246,7 +264,7 @@ cl_crosshairthickness "0.4"
 cl_crosshairusealpha "1"
 cl_fixedcrosshairgap "3"
 
-echo [X] Crosshair Loaded
+echo "[X] Crosshair Loaded"
 
 
                 /////////////////////
@@ -284,8 +302,7 @@ viewmodel_recoil "1"                   // Disable viewmodel reactions to weapon 
 
 cl_hud_background_alpha "0.5"    // Hidden but still visible black bars, easy on the eyes
 cl_hud_color "4"                 // This changes the HUD colorS
-
-cl_color "0"
+cl_color "1"                     // Preferred game color
 
 //  Style  //
 /////////////
@@ -331,7 +348,7 @@ net_maxroutable "1200"
 net_scale "1.2"
 net_steamcnx_allowrelay "1"
 
-echo [X] HUD Settings Loaded
+echo "[X] HUD Settings Loaded"
 
 
                    /////////////////
@@ -396,7 +413,7 @@ vprof_unaccounted_limit "0.3"
 vprof_verbose "1"
 vprof_warningmsec "10"
 
-echo [X] Sound Settings Loaded
+echo "[X] Sound Settings Loaded"
 
 
                    ////////////////
@@ -404,4 +421,12 @@ echo [X] Sound Settings Loaded
                    ////////////////
 
 
+echo ""
+
 host_writeconfig
+
+echo ""
+echo "========================================"
+echo "    autoexec.cfg loaded successfully"
+echo "========================================"
+echo ""
