--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -215,6 +215,7 @@ echo "[X] Binds Loaded"
                 //    Crosshair    //
                 /////////////////////
 
+
 crosshair "1"
 
 // AWP, AUG, SSG  //
@@ -227,7 +228,7 @@ cl_crosshair_t "0"
 //  Outline  //
 ///////////////
 
-cl_crosshair_drawoutline "1"
+cl_crosshair_drawoutline "0"
 cl_crosshair_outlinethickness "1"
 
 //  Transparency  //
@@ -272,6 +273,7 @@ echo "[X] Crosshair Loaded"
                 /////////////////////
 
 
+cl_showfps "1"                      // Show FPS in game
 cl_autohelp "0"                     // Removes automatic help
 cl_disablefreezecam "1"             // Disables freezecam
 cl_show_clan_in_death_notice "0"    // Tagname will not show in death notices
