--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -18,6 +18,7 @@ cl_autowepswitch "0"                                    // Disable auto-weapon s
 cl_disablehtmlmotd "1"
 cl_dm_buyrandomweapons "0"                              // Disable random weapons in Deathmatch
 cl_downloadfilter "nosounds"
+cl_filtertext_enabled "0"                               // Disable text filters for bad words
 cl_forcepreload "1"
 cl_join_advertise "2"                                   // Let friends join your community servers
 cl_use_opens_buy_menu "0"                               // Disable button E from opening buy-menu (Useful when picking up weapons in spawn)
@@ -28,6 +29,7 @@ option_speed_method "0"
 player_nevershow_communityservermessage "1"
 spec_replay_autostart "0"                               // Disable `Auto-start Killer Replay` when available
 ui_steam_overlay_notification_position "bottomright"
+
 
 echo "[X] Miscelaneous Settings Loade"
 
@@ -195,7 +197,8 @@ bind "F10" "quit prompt"
 
 bind "KP_MINUS" "toggle voice_enable 1 0"
 bind "KP_ENTER" "demo_togglepause"
-bind "KP_PLUS" "demo_timescale 5"
+bind "KP_PLUS"  "demo_timescale 5"
+bind "KP_SLASH" "radio"
 
 bind "KP_END"        "demo_timescale 0.1;sv_showimpacts_time 0.1"
 bind "KP_DOWNARROW"  "demo_timescale 0.2;sv_showimpacts_time 0.2"
@@ -273,7 +276,7 @@ echo "[X] Crosshair Loaded"
                 /////////////////////
 
 
-cl_showfps "1"                      // Show FPS in game
+cl_showfps "0"                      // Show FPS in game
 cl_autohelp "0"                     // Removes automatic help
 cl_disablefreezecam "1"             // Disables freezecam
 cl_show_clan_in_death_notice "0"    // Tagname will not show in death notices
@@ -283,8 +286,8 @@ gameinstructor_enable "0"           // Removes in-game instructions
 //  Weapon  //
 ///////////////
 
-cl_bob_lower_amt "21"                  // How much the viewmodel lowers when running, set to lowest for less distraction
-cl_bobamt_lat "0.500000"               // How much the viewmodel moves side to side when running, set to lowest for less distraction
+cl_bob_lower_amt "21"                   // How much the viewmodel lowers when running, set to lowest for less distraction
+cl_bobamt_lat "0.400000"               // How much the viewmodel moves side to side when running, set to lowest for less distraction
 cl_bobamt_vert "0.250000"              // How much the viewmodel moves up and down when running, set to lowest for less distraction
 cl_bobcycle "0.98"                     // The frequency at which the viewmodel bobs, set to default
 cl_righthand "0"
@@ -292,18 +295,18 @@ cl_showloadout "1"                     // So it doesn`t fade out the weapon slot
 cl_viewmodel_shift_left_amt "1.5"      // Lowers the crouching animation of the viewmodel
 cl_viewmodel_shift_right_amt "0.75"    // Lowers the crouching animation of the viewmodel
 r_drawtracers_firstperson "1"          // Add first person tracers, does not impact gameplay
-viewmodel_fov "60"                     // Changes viewmodel FOV
-viewmodel_offset_x "-1"                // Changes viewmodel view in X scale
-viewmodel_offset_y "-2"                // Changes viewmodel view in Y scale
-viewmodel_offset_z "-1"                // Changes viewmodel view in Z scale
-viewmodel_presetpos "1"
+viewmodel_fov "68"                     // Changes viewmodel FOV
+viewmodel_offset_x "-2"                // Changes viewmodel view in X scale
+viewmodel_offset_y "2"                 // Changes viewmodel view in Y scale
+viewmodel_offset_z "-2"                // Changes viewmodel view in Z scale
+// viewmodel_presetpos "1"
 viewmodel_recoil "1"                   // Disable viewmodel reactions to weapon recoil & aimpunch (from Update: 2018-03-01)
 
 //  Color  //
 /////////////
 
 cl_hud_background_alpha "0.5"    // Hidden but still visible black bars, easy on the eyes
-cl_hud_color "4"                 // This changes the HUD colorS
+cl_hud_color "4"                 // This changes the HUD colors
 cl_color "1"                     // Preferred game color
 
 //  Style  //
@@ -368,31 +371,32 @@ snd_duckerreleasetime "2.5"
 snd_duckerthreshold "0.15"
 snd_ducking_off "1"
 snd_ducktovolume "0.55"
-snd_dzmusic_volume "0.25"                          // Volume of the Danger Zone victory music
+snd_dzmusic_volume "0.297497"                      // Volume of the Danger Zone victory music
 snd_front_headphone_position "53.2"
 snd_headphone_pan_exponent "1.2"
 snd_headphone_pan_radial_weight "0.5"
 snd_hrtf_distance_behind "100"
 snd_hrtf_voice_delay "0.1"
 snd_hwcompat "0"
-snd_mapobjective_volume "0.10"                     // Volume of map objective music
-snd_menumusic_volume "0.0"                         // Volume of the main menu music
+snd_mapobjective_volume "0.059499"                 // Volume of map objective music
+snd_menumusic_volume "0.027991"                    // Volume of the main menu music
 snd_mix_async_onetime_reset "1"
 snd_mix_async "1"
 snd_mixahead "0.02"
 snd_music_selection "2"                            // Tracking rotating music for players with no music packs equipped
 snd_music_volume_onetime_reset_2 "1"
-snd_musicvolume_multiplier_inoverlay "0.000000"    // Music volume multiplier when Steam Overlay is active
+snd_musicvolume_multiplier_inoverlay "0.500000"    // Music volume multiplier when Steam Overlay is active
 snd_mute_losefocus "0"
-snd_mute_mvp_music_live_players "0"                // MVP music is muted if players from both teams are still alive
-snd_mvp_volume "0.25"                              // Volume of the MVP music
+snd_mute_mvp_music_live_players "1"                // MVP music is muted if players from both teams are still alive
+snd_mvp_volume "0.297497"                          // Volume of the MVP music
 snd_pitchquality "1"
 snd_rear_headphone_position "90.0"
-snd_roundend_volume "0   "                         // Volume of round end music
+snd_roundend_volume "0"                            // Volume of round end music
 snd_roundstart_volume "0"                          // Volume of round start music
 snd_surround_speakers "0"
-snd_tensecondwarning_volume "0.25"                 // 10 Second warning music, enabled on 3% volume to hear if there`s time to defuse
-voice_scale "0.40"                                 // Turn down volume of other players to 40% (RECOMMENDED)
+snd_tensecondwarning_volume "0.297497"             // 10 Second warning music, enabled on 3% volume to hear if there`s time to defuse
+voice_scale "0.30"                                 // Turn down volume of other players to 30%
+volume ".7"                                        // Game volume
 
 //  Microphone  //
 //////////////////
@@ -408,7 +412,7 @@ voice_modenable "1"
 voice_positional "1"
 voice_system_enable "1"
 voice_threshold "2000"
-volume ".3"
+
 vprof_graphheight "256"
 vprof_graphwidth "512"
 vprof_unaccounted_limit "0.3"
