--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -19,7 +19,7 @@ cl_disablehtmlmotd "1"
 cl_dm_buyrandomweapons "0"                              // Disable random weapons in Deathmatch
 cl_downloadfilter "nosounds"
 cl_filtertext_enabled "0"                               // Disable text filters for bad words
-cl_forcepreload "1"
+cl_forcepreload "0"
 cl_join_advertise "2"                                   // Let friends join your community servers
 cl_use_opens_buy_menu "0"                               // Disable button E from opening buy-menu (Useful when picking up weapons in spawn)
 func_break_max_pieces "0"                               // Less clutter from breaking vents (especially on Mirage)
@@ -31,7 +31,7 @@ spec_replay_autostart "0"                               // Disable `Auto-start K
 ui_steam_overlay_notification_position "bottomright"
 
 
-echo "[X] Miscelaneous Settings Loade"
+echo "[X] Miscelaneous Settings Loaded"
 
 // Network //
 /////////////
@@ -53,8 +53,8 @@ echo "[X] Network Settings Loaded"
 //  FPS & Video  //
 ///////////////////
 
-fps_max "0"                        // Max frames per second (0 = uncapped)
-fps_max_menu "150"                 // Max frames per second in main-menu (0 = uncapped)
+fps_max "999"                      // Max frames per second (0 = uncapped)
+fps_max_menu "144"                 // Max frames per second in main-menu (0 = uncapped)
 mat_monitorgamma "2.2"             // Sets brightness level
 mat_monitorgamma_tv_enabled "0"    // Turn off TV Mode for less off-set light
 mat_powersavingsmode "0"           // Disables power saving mode
@@ -73,7 +73,7 @@ m_mouseaccel2 "0"                     // Disables windows mouse acceleration ini
 m_mouseaccel1 "0"                     // Disables windows mouse acceleration initial threshold, safety precaution
 m_customaccel "0"                     // Custom mouse acceleration disabled
 m_mousespeed "1"                      // Windows mouse acceleration disabled, just for precaution
-sensitivity "1.6"                     // Adjusts your crosshair sensitivity to act as your true sensitivity, default value is 2
+sensitivity "1.55"                    // Adjusts your crosshair sensitivity to act as your true sensitivity, default value is 2
 zoom_sensitivity_ratio_mouse "0.9"    // Adjusts your zoom sensitivity to act as your true sensitivity, default value is 1
 
 m_pitch "0.022"
@@ -232,7 +232,7 @@ cl_crosshair_t "0"
 ///////////////
 
 cl_crosshair_drawoutline "0"
-cl_crosshair_outlinethickness "1"
+cl_crosshair_outlinethickness "0.5"
 
 //  Transparency  //
 ////////////////////
@@ -243,14 +243,14 @@ cl_crosshairalpha "250"
 /////////////
 
 cl_crosshaircolor "5"
-cl_crosshaircolor_b "144"
-cl_crosshaircolor_g "195"
-cl_crosshaircolor_r "27"
+cl_crosshaircolor_b "255"
+cl_crosshaircolor_g "100"
+cl_crosshaircolor_r "200"
 
 //  Middle dot  //
 //////////////////
 
-cl_crosshairdot "1"
+cl_crosshairdot "0"
 
 //  Style  //
 /////////////
@@ -260,11 +260,11 @@ cl_crosshair_dynamic_splitalpha_innermod "1"
 cl_crosshair_dynamic_splitalpha_outermod "0.5"
 cl_crosshair_dynamic_splitdist "7"
 cl_crosshair_friendly_warning "2"
-cl_crosshairgap "-1"
+cl_crosshairgap "-1.500000"
 cl_crosshairgap_useweaponvalue "0"
-cl_crosshairsize "1"
+cl_crosshairsize "2.000000"
 cl_crosshairstyle "5"
-cl_crosshairthickness "0.4"
+cl_crosshairthickness "1.000000"
 cl_crosshairusealpha "1"
 cl_fixedcrosshairgap "3"
 
@@ -276,7 +276,7 @@ echo "[X] Crosshair Loaded"
                 /////////////////////
 
 
-cl_showfps "0"                      // Show FPS in game
+cl_showfps "1"                      // Show FPS in game
 cl_autohelp "0"                     // Removes automatic help
 cl_disablefreezecam "1"             // Disables freezecam
 cl_show_clan_in_death_notice "0"    // Tagname will not show in death notices
