--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -2,7 +2,11 @@
 // Mouse Hertz: 1000Hz
 // Monitor Hertz: 144hz
 // Windows Default (Uncheck Enhance Precision)
-
+echo ""
+echo "========================================"
+echo "      autoexec.cfg is being loaded"
+echo "========================================"
+echo ""
 
                 /////////////////
                 //     Game    //
@@ -14,11 +18,11 @@
 
 con_enable "1"                                          // Enables console
 closeonbuy "1"
+demo_index "1"                                          // Improves replay performance
 cl_autowepswitch "0"                                    // Disable auto-weapon switch
 cl_disablehtmlmotd "1"
 cl_dm_buyrandomweapons "0"                              // Disable random weapons in Deathmatch
 cl_downloadfilter "nosounds"
-cl_filtertext_enabled "0"                               // Disable text filters for bad words
 cl_forcepreload "0"
 cl_join_advertise "2"                                   // Let friends join your community servers
 cl_use_opens_buy_menu "0"                               // Disable button E from opening buy-menu (Useful when picking up weapons in spawn)
@@ -59,8 +63,7 @@ mat_monitorgamma "2.2"             // Sets brightness level
 mat_monitorgamma_tv_enabled "0"    // Turn off TV Mode for less off-set light
 mat_powersavingsmode "0"           // Disables power saving mode
 mat_queue_mode "-1"                // The queue/thread mode, setting this to -1 is default for your system
-r_dynamic "1"                      // Affects dynamic lighting
-
+r_dynamic "0"                      // Affects dynamic lighting
 engine_no_focus_sleep "0"
 
 echo "[X] FPS & Video Settings Loaded"
@@ -149,9 +152,9 @@ bind "z" "radio1"
 bind "x" "radio2"
 bind "y" "messagemode"
 bind "u" "messagemode2"
+bind "c" "toggleconsole"
 
 bind "i" "toggle sv_showimpacts 0 1"    // show bullet impacts on walls, playermodels
-bind "o" "exec spectator.cfg"
 bind "p" "sv_rethrow_last_grenade"
 
 //  Keyboard Symbols  //
@@ -161,7 +164,6 @@ bind "-" "slot11"
 bind "=" "slot12"
 
 bind "," "noclip"
-bind "`" "toggleconsole"
 bind "[" "host_timescale 1"
 bind "]" "host_timescale 4"
 bind "\" "say O cara vem jogar façet pra ficar chorando .."
@@ -276,7 +278,7 @@ echo "[X] Crosshair Loaded"
                 /////////////////////
 
 
-cl_showfps "1"                      // Show FPS in game
+cl_showfps "0"                      // Show FPS in game
 cl_autohelp "0"                     // Removes automatic help
 cl_disablefreezecam "1"             // Disables freezecam
 cl_show_clan_in_death_notice "0"    // Tagname will not show in death notices
@@ -420,17 +422,6 @@ vprof_verbose "1"
 vprof_warningmsec "10"
 
 echo "[X] Sound Settings Loaded"
-
-
-                   ////////////////
-                   //   Finish   //
-                   ////////////////
-
-
-echo ""
-
-host_writeconfig
-
 echo ""
 echo "========================================"
 echo "    autoexec.cfg loaded successfully"
