--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -57,8 +57,8 @@ echo "[X] Network Settings Loaded"
 //  FPS & Video  //
 ///////////////////
 
-fps_max "999"                      // Max frames per second (0 = uncapped)
-fps_max_menu "144"                 // Max frames per second in main-menu (0 = uncapped)
+fps_max "0"                        // Max frames per second (0 = uncapped)
+fps_max_menu "150"                 // Max frames per second in main-menu (0 = uncapped)
 mat_monitorgamma "2.2"             // Sets brightness level
 mat_monitorgamma_tv_enabled "0"    // Turn off TV Mode for less off-set light
 mat_powersavingsmode "0"           // Disables power saving mode
@@ -75,7 +75,7 @@ m_rawinput "1"                        // Enable Raw Input for perfect precision 
 m_mouseaccel2 "0"                     // Disables windows mouse acceleration initial threshold, safety precaution
 m_mouseaccel1 "0"                     // Disables windows mouse acceleration initial threshold, safety precaution
 m_customaccel "0"                     // Custom mouse acceleration disabled
-m_mousespeed "1"                      // Windows mouse acceleration disabled, just for precaution
+m_mousespeed "0"                      // Windows mouse acceleration disabled, just for precaution
 sensitivity "1.55"                    // Adjusts your crosshair sensitivity to act as your true sensitivity, default value is 2
 zoom_sensitivity_ratio_mouse "0.9"    // Adjusts your zoom sensitivity to act as your true sensitivity, default value is 1
 
@@ -94,6 +94,12 @@ alias -duckjump "-jump; -duck"
 
 alias +jumpthrow "+jump; -attack"
 alias -jumpthrow "-jump"
+
+alias +netgraphscores "net_graph 1; +showscores"
+alias -netgraphscores "net_graph 0; -showscores"
+
+alias +incvolwalk "incrementvar volume 0 2  0.5; +speed"
+alias -incvolwalk "incrementvar volume 0 2 -0.5; -speed"
 
 echo "[X] Aliases Loaded"
 
@@ -163,7 +169,7 @@ bind "p" "sv_rethrow_last_grenade"
 bind "-" "slot11"
 bind "=" "slot12"
 
-bind "," "noclip"
+bind "," "sv_cheats 1; noclip"
 bind "[" "host_timescale 1"
 bind "]" "host_timescale 4"
 bind "\" "say O cara vem jogar façet pra ficar chorando .."
@@ -172,8 +178,8 @@ bind "\" "say O cara vem jogar façet pra ficar chorando .."
 ////////////////////////
 
 bind "ESCAPE" "cancelselect"
-bind "TAB"    "+showscores"
-bind "SHIFT"  "+speed"
+bind "TAB"    "+netgraphscores"
+bind "SHIFT"  "+incvolwalk"
 bind "CTRL"   "+duck"
 bind "ALT"    "+radar"
 bind "SPACE"  "+duckjump"
@@ -197,21 +203,22 @@ bind "F10" "quit prompt"
 //  Keyboard KeyPad  //
 ///////////////////////
 
-bind "KP_MINUS" "toggle voice_enable 1 0"
-bind "KP_ENTER" "demo_togglepause"
-bind "KP_PLUS"  "demo_timescale 5"
-bind "KP_SLASH" "radio"
+bind "KP_MINUS"    "toggle voice_enable 1 0"
+bind "KP_ENTER"    "demo_togglepause"
+bind "KP_PLUS"     "demo_timescale 7"
+bind "KP_SLASH"    "radio"
+bind "KP_MULTIPLY" ""
 
-bind "KP_END"        "demo_timescale 0.1;sv_showimpacts_time 0.1"
-bind "KP_DOWNARROW"  "demo_timescale 0.2;sv_showimpacts_time 0.2"
-bind "KP_PGDN"       "demo_timescale 0.3;sv_showimpacts_time 0.3"
-bind "KP_LEFTARROW"  "demo_timescale 0.4;sv_showimpacts_time 0.4"
-bind "KP_5"          "demo_timescale 0.5;sv_showimpacts_time 0.5"
-bind "KP_RIGHTARROW" "demo_timescale 0.6;sv_showimpacts_time 0.6"
-bind "KP_HOME"       "demo_timescale 0.7;sv_showimpacts_time 0.7"
-bind "KP_UPARROW"    "demo_timescale 0.8;sv_showimpacts_time 0.8"
-bind "KP_PGUP"       "demo_timescale 0.9;sv_showimpacts_time 0.9"
-bind "KP_INS"        "demo_timescale 1;sv_showimpacts_time 1"
+bind "KP_END"        "demo_timescale 0.1; sv_showimpacts_time 0.1"
+bind "KP_DOWNARROW"  "demo_timescale 0.2; sv_showimpacts_time 0.2"
+bind "KP_PGDN"       "demo_timescale 0.3; sv_showimpacts_time 0.3"
+bind "KP_LEFTARROW"  "demo_timescale 0.4; sv_showimpacts_time 0.4"
+bind "KP_5"          "demo_timescale 0.5; sv_showimpacts_time 0.5"
+bind "KP_RIGHTARROW" "demo_timescale 0.6; sv_showimpacts_time 0.6"
+bind "KP_HOME"       "demo_timescale 0.7; sv_showimpacts_time 0.7"
+bind "KP_UPARROW"    "demo_timescale 0.8; sv_showimpacts_time 0.8"
+bind "KP_PGUP"       "demo_timescale 0.9; sv_showimpacts_time 0.9"
+bind "KP_INS"        "demo_timescale 1;   sv_showimpacts_time 1"
 
 echo "[X] Binds Loaded"
 
@@ -278,7 +285,7 @@ echo "[X] Crosshair Loaded"
                 /////////////////////
 
 
-cl_showfps "0"                      // Show FPS in game
+cl_showfps "1"                      // Show FPS in game
 cl_autohelp "0"                     // Removes automatic help
 cl_disablefreezecam "1"             // Disables freezecam
 cl_show_clan_in_death_notice "0"    // Tagname will not show in death notices
