--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -59,11 +59,12 @@ echo "[X] Network Settings Loaded"
 
 fps_max "0"                        // Max frames per second (0 = uncapped)
 fps_max_menu "150"                 // Max frames per second in main-menu (0 = uncapped)
-mat_monitorgamma "2.2"             // Sets brightness level
+mat_monitorgamma "2.0"             // Sets brightness level
 mat_monitorgamma_tv_enabled "0"    // Turn off TV Mode for less off-set light
 mat_powersavingsmode "0"           // Disables power saving mode
 mat_queue_mode "-1"                // The queue/thread mode, setting this to -1 is default for your system
 r_dynamic "0"                      // Affects dynamic lighting
+r_drawparticles "0"
 engine_no_focus_sleep "0"
 
 echo "[X] FPS & Video Settings Loaded"
@@ -172,7 +173,8 @@ bind "=" "slot12"
 bind "," "sv_cheats 1; noclip"
 bind "[" "host_timescale 1"
 bind "]" "host_timescale 4"
-bind "\" "say O cara vem jogar façet pra ficar chorando .."
+bind "\" "say Cala a boca John"
+bind "/" "playerradio deathcry Tirei-Um-Corno-Do-Rabo"
 
 //  Keyboard Special  //
 ////////////////////////
