--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -64,7 +64,7 @@ mat_monitorgamma_tv_enabled "0"    // Turn off TV Mode for less off-set light
 mat_powersavingsmode "0"           // Disables power saving mode
 mat_queue_mode "-1"                // The queue/thread mode, setting this to -1 is default for your system
 r_dynamic "0"                      // Affects dynamic lighting
-r_drawparticles "0"
+cl_forcepreload "1"
 engine_no_focus_sleep "0"
 
 echo "[X] FPS & Video Settings Loaded"
