--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -34,13 +34,13 @@ spec_replay_autostart "0"                               // Disable `Auto-start K
 ui_steam_overlay_notification_position "bottomright"
 
 
-echo "[X] Miscelaneous Settings Loaded"
+echo " [X] Miscelaneous Settings Loaded"
 
 // Network //
 /////////////
 
 cl_cmdrate "128"                    // Max number of command packets sent to server per second
-cl_interp "0.007813"                // Sets the interpolation amount, currently on the lowest value
+cl_interp "0.0078125"               // Sets the interpolation amount, currently on the lowest value
 cl_interp_ratio "1"                 // Sets the interpolation amount (final amount is cl_interp_ratio / cl_updaterate)
 cl_lagcompensation "1"              // Lag compensation helps by eliminating combat latency from client side view
 cl_predict "1"                      // Skip waiting for server feedback and simulate client side movement in real-time
@@ -51,7 +51,7 @@ rate "786432"                       // Your download rate to the server. Max rat
 
 net_client_steamdatagram_enable_override "1"
 
-echo "[X] Network Settings Loaded"
+echo " [X] Network Settings Loaded"
 
 //  FPS & Video  //
 ///////////////////
@@ -65,7 +65,7 @@ mat_queue_mode "-1"                // The queue/thread mode, setting this to -1 
 r_dynamic "0"                      // Affects dynamic lighting
 engine_no_focus_sleep "0"
 
-echo "[X] FPS & Video Settings Loaded"
+echo " [X] FPS & Video Settings Loaded"
 
 //  Mouse  //
 /////////////
@@ -80,7 +80,7 @@ zoom_sensitivity_ratio_mouse "0.9"    // Adjusts your zoom sensitivity to act as
 
 m_pitch "0.022"
 
-echo "[X] Mouse Settings Loaded"
+echo " [X] Mouse Settings Loaded"
 
 
                 /////////////////
@@ -100,7 +100,7 @@ alias -netgraphscores "net_graph 0; -showscores"
 alias +incvolwalk "incrementvar volume 0 2  0.5; +speed"
 alias -incvolwalk "incrementvar volume 0 2 -0.5; -speed"
 
-echo "[X] Aliases Loaded"
+echo " [X] Aliases Loaded"
 
 
                 /////////////////
@@ -220,7 +220,7 @@ bind "KP_UPARROW"    "demo_timescale 0.8; sv_showimpacts_time 0.8"
 bind "KP_PGUP"       "demo_timescale 0.9; sv_showimpacts_time 0.9"
 bind "KP_INS"        "demo_timescale 1;   sv_showimpacts_time 1"
 
-echo "[X] Binds Loaded"
+echo " [X] Binds Loaded"
 
 
                 /////////////////////
@@ -277,7 +277,7 @@ cl_crosshairthickness "1.000000"
 cl_crosshairusealpha "1"
 cl_fixedcrosshairgap "3"
 
-echo "[X] Crosshair Loaded"
+echo " [X] Crosshair Loaded"
 
 
                 /////////////////////
@@ -362,7 +362,7 @@ net_maxroutable "1200"
 net_scale "1.2"
 net_steamcnx_allowrelay "1"
 
-echo "[X] HUD Settings Loaded"
+echo " [X] HUD Settings Loaded"
 
 
                    /////////////////
@@ -428,7 +428,7 @@ vprof_unaccounted_limit "0.3"
 vprof_verbose "1"
 vprof_warningmsec "10"
 
-echo "[X] Sound Settings Loaded"
+echo " [X] Sound Settings Loaded"
 echo ""
 echo "========================================"
 echo "    autoexec.cfg loaded successfully"
