--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -563,7 +563,7 @@ echo ""
         //                all sound based files;
         //     none     - Blocks all downloads (map, material, model, sound
         //                etc);
-        cl_downloadfilter "none"
+        cl_downloadfilter "all"
 
         echo "   [X] Rates Settings Loaded"
 
